--- a/conventions/common_trait.html
+++ b/conventions/common_trait.html
@@ -168,25 +168,29 @@
 </ol>
 <h3><a class="header" href="#traits" id="traits">Traits</a></h3>
 <p>Traits are behavior and properties that an object can have. By specifying these traits inside the item's nbt. Other datapacks will be able to refer to that item via traits instead of item id directly.</p>
-<p>Traits is an array of strings and so will look like this in nbt (notice <code>traits: [...]</code>?)</p>
-<pre><code class="language-mcfunction">/give @s diamond{ctc: {traits: [&quot;some&quot;, &quot;trait&quot;, &quot;here&quot;], id: &quot;example&quot;, from: &quot;convention:wiki&quot;}}
+<p>Traits are a compound tag of strings and booleans and so will look like this in nbt (notice <code>traits: {...}</code>?)</p>
+<pre><code class="language-mcfunction">/give @s diamond{ctc: {traits: {&quot;some&quot;: 1b, &quot;trait&quot;: 1b, &quot;here&quot;: 1b}, id: &quot;example&quot;, from: &quot;convention:wiki&quot;}}
 </code></pre>
 <h3><a class="header" href="#syntax" id="syntax">Syntax</a></h3>
 <p>Common Trait Convention's syntax will be stored inside <code>ctc</code> nbt of item. inside<code>ctc</code> contains: <code>id</code>, <code>from</code> and <code>traits</code> nbts.</p>
 <ul>
 <li><code>id</code>: internal id of your item, this should not be used outside of your datapack but should be unique within your datapack.</li>
 <li><code>from</code>: a namespace specifying which datapack is the item comes from.</li>
-<li><code>traits</code>: an array of traits that you can use to refer to items outside of your datapack.</li>
+<li><code>traits</code>: a set of traits that you can use to refer to items outside of your datapack.</li>
 </ul>
 <p>We will assume the following syntax is the NBT structure of <code>/give</code> command</p>
 <pre><code class="language-text">{
     ctc: {
         id: &quot;my_copper_ore&quot;,
         from: &quot;convention:wiki&quot;,
-        traits: [&quot;metal/copper&quot;, &quot;block&quot;, &quot;ore&quot;]
+        traits: {&quot;metal/copper&quot;: 1b, &quot;block&quot;: 1b, &quot;ore&quot;: 1b}
     }
 }
 </code></pre>
+<blockquote>
+<p>Minecraft does not have a <code>set</code> data type so we replicate it using a compound tag.
+This means every trait must have a value of <code>1b</code> or <code>true</code> to stay consistent.</p>
+</blockquote>
 <p>Let's look at <code>traits</code> nbt</p>
 <ul>
 <li><code>metal/copper</code>, this trait tells us that this item is copper.</li>
@@ -201,18 +205,27 @@
 <blockquote>
 <p>Detect if the player is holding a weapon</p>
 </blockquote>
-<pre><code class="language-mcfunction">execute as @a if entity @s SelectedItem.tag.ctc{traits: [&quot;tool/weapon&quot;]} run ...
+<pre><code class="language-mcfunction">execute as @a if entity @s SelectedItem.tag.ctc.traits.&quot;tool/weapon&quot; run ...
 </code></pre>
+<p>This command detect if the item the player is holding contains trait <code>tool/weapon</code></p>
+<hr />
 <blockquote>
 <p>Detect if the container contains copper ore</p>
 </blockquote>
-<pre><code class="language-mcfunction">execute if block ~ ~ ~ Items[].tag.ctc{traits: [&quot;metal/copper&quot;, &quot;ore&quot;]} run ...
+<pre><code class="language-mcfunction">execute if block ~ ~ ~ Items[].tag.ctc.traits{&quot;metal/copper&quot;: 1b, &quot;ore&quot;: 1b} run ...
 </code></pre>
+<p>This command detects if the container contains an item with traits <code>metal/copper</code> and <code>ore</code></p>
+<hr />
 <blockquote>
 <p>Detect if the container contains a placeable item</p>
 </blockquote>
-<pre><code class="language-mcfunction">execute if block ~ ~ ~ Items[].tag.ctc{traits: [&quot;block&quot;]} run ...
+<pre><code class="language-mcfunction">execute if block ~ ~ ~ Items[].tag.ctc.traits.&quot;block&quot; run ...
 </code></pre>
+<p>This command detects if the container contain item with trait <code>block</code> which represent an item that can be placed on the ground.</p>
+<hr />
+<blockquote>
+<p>While quote around the trait is not necessary in some cases, I keep it there to stay consistent.</p>
+</blockquote>
 <h2><a class="header" href="#basic-traits" id="basic-traits">Basic Traits</a></h2>
 <p>This is a provided list of traits that you can use, this doesn't mean you can't create new traits for your own use but if there is a trait that suits your need in this you should use it instead.</p>
 <blockquote>
@@ -227,7 +240,7 @@
 <tr><td>item</td><td>Normal minecraft item</td></tr>
 </tbody></table>
 <h3><a class="header" href="#special-type-group" id="special-type-group">Special Type Group</a></h3>
-<p>This trait represents common behavior from modded minecraft, this should help with integrating your pack into this convention.</p>
+<p>This trait represents common behavior from Modded Minecraft, this should help with integrating your pack into this convention.</p>
 <blockquote>
 <p>This group is an exception to the rule above, you can use multiple traits from this group as much as you like.</p>
 </blockquote>
