deploy: 863fcdb1da9185158c4e731478ce42605e9321c4

--- a/conventions/custom_model_id.html
+++ b/conventions/custom_model_id.html
@@ -194,6 +194,8 @@
     ]
 }
 </code></pre>
+<h2><a class="header" href="#note" id="note">Note</a></h2>
+<p>This convention does not enforce any restriction from the 8th digit onwards. Datapacker could utilize this to gain a few more model slots if they want to. (the digit index is count from right-to-left of course)</p>
 
                     </main>
 
