deploy: 27187677e00fa6ac15fc025514c99f4192c2214b

--- a/certified_datapacks/requirement.html
+++ b/certified_datapacks/requirement.html
@@ -160,7 +160,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#requirement" id="requirement">Requirement</a></h1>
-<p>Datapack must satisfy these requirements to receive Certified Datapack title</p>
+<p>A datapack must satisfy these requirements to receive the Certified Datapack title</p>
 <ul>
 <li>Datapack must be portable, it must not be tied down to a specific save.</li>
 <li>Datapack must follow all of <strong>Tier 3</strong> Conventions.</li>
