--- a/conventions/index.html
+++ b/conventions/index.html
@@ -160,7 +160,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#official-conventions" id="official-conventions">Official Conventions</a></h1>
-<p>These are official conventions that everyone <strong>should</strong> followed for datapack compatibility.</p>
+<p>These are the official conventions that everyone should follow for datapack compatibility.</p>
 
                     </main>
 
