--- a/conventions/shulker_box_loot_table.html
+++ b/conventions/shulker_box_loot_table.html
@@ -161,7 +161,7 @@
                     <main>
                         <h1><a class="header" href="#shulker-box-loot-table-" id="shulker-box-loot-table-">Shulker Box Loot Table (<code>***</code>)</a></h1>
 <h2><a class="header" href="#about" id="about">About</a></h2>
-<p>This convention aims to make <a href="../tips/shulker_box_inventory_manipulation.html">Shulker Box Inventory Manipulation</a> as conflicted-free as possible by enforcing a specific loot table for <code>minecraft:yellow_shulker_box</code> block.</p>
+<p>This convention aims to make <a href="../tips/shulker_box_inventory_manipulation.html">Shulker Box Inventory Manipulation</a> as conflict-free as possible by enforcing a specific loot table for the <code>minecraft:yellow_shulker_box</code> block.</p>
 <h2><a class="header" href="#implementation" id="implementation">Implementation</a></h2>
 <p>Simply use this loot table inside <code>/data/minecraft/loot_tables/blocks/yellow_shulker_box.json</code> when you want to use the <a href="../tips/shulker_box_inventory_manipulation.html">Inventory Manipulation</a> trick.</p>
 <pre><code class="language-json">{
