--- a/tips/index.html
+++ b/tips/index.html
@@ -160,7 +160,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#tips" id="tips">Tips</a></h1>
-<p>Various tips and tricks for developing datapack.</p>
+<p>Various tips and tricks for developing datapacks.</p>
 
                     </main>
 
