--- a/certified_datapacks/index.html
+++ b/certified_datapacks/index.html
@@ -162,16 +162,16 @@
                         <h1><a class="header" href="#certified-datapacks" id="certified-datapacks">Certified Datapacks</a></h1>
 <ul>
 <li>
-<p>Datapack that has followed a bare metal <strong>Tier 3</strong> conventions are allowed to use this banner
+<p>Datapacks that have followed the bare metal <strong>Tier 3</strong> conventions are allowed to use this banner
 <img src="https://i.imgur.com/4Z0ioH5.png" alt="" /></p>
 </li>
 <li>
-<p>Datapack that has followed <strong>Tier 3</strong> conventions and various style-related conventions defined in the <a href="../style_guideline/index.html">Style Guideline</a> section can use this banner.
+<p>Datapacks that have followed the <strong>Tier 3</strong> conventions and various style-related conventions defined in the <a href="../style_guideline/index.html">Style Guideline</a> section can use this banner.
 <img src="https://i.imgur.com/ltLPoQp.png" alt="" /></p>
 </li>
 </ul>
 <blockquote>
-<p>Certified Datapacks have a benefit of knowing that your datapack will be compatible with other datapacks.</p>
+<p>Certified Datapacks have the benefit that they are guaranteed to be compatible with other datapacks.</p>
 </blockquote>
 
                     </main>
