--- a/conventions/custom_model_id.html
+++ b/conventions/custom_model_id.html
@@ -161,12 +161,12 @@
                     <main>
                         <h1><a class="header" href="#custom-model-id-" id="custom-model-id-">Custom Model ID (<code>***</code>)</a></h1>
 <h2><a class="header" href="#about" id="about">About</a></h2>
-<p>This convention aims to reduce conflict within the <a href="https://minecraft.gamepedia.com/Model#Item_tags">custom model data</a> system as much as possible by assigning a unique id for every creator to use.</p>
-<h2><a class="header" href="#1-register-your-id" id="1-register-your-id">1. Register your id</a></h2>
-<p>&quot;id&quot; is an integer between 1-999 which we'll use to uniquely namespaced custom model data to prevent conflict between <a href="https://minecraft.gamepedia.com/Resource_pack">resourcepacks</a>.</p>
-<p>You can register your id at <a href="https://mc-datapacks.web.app/custom_model_id">https://mc-datapacks.web.app</a>.</p>
+<p>This convention aims to reduce conflict between <a href="https://minecraft.gamepedia.com/Resource_pack">resource packs</a> within the <a href="https://minecraft.gamepedia.com/Model#Item_tags">custom model data</a> system as much as possible by assigning a unique ID for every creator to use.</p>
+<h2><a class="header" href="#1-register-your-id" id="1-register-your-id">1. Register your ID</a></h2>
+<p>Your &quot;id&quot; is an integer between 1-999 which we'll use as a unique namespace.</p>
+<p>You can register your ID at <a href="https://mc-datapacks.web.app/custom_model_id">https://mc-datapacks.web.app</a>.</p>
 <h2><a class="header" href="#2-prefix-your-model-with-your-id" id="2-prefix-your-model-with-your-id">2. Prefix your model with your id</a></h2>
-<p>You will prefix your custom model data with your id in this format where <code>XXX</code> is your ID and <code>0000</code> is any custom model data that fits within 4 digits.</p>
+<p>You will prefix your custom model data with your ID in this format, where <code>XXX</code> is your ID and <code>0000</code> is your unique custom model data.</p>
 <table><thead><tr><th>id</th><th>cmd</th></tr></thead><tbody>
 <tr><td>XXX</td><td>0000</td></tr>
 </tbody></table>
@@ -199,7 +199,7 @@
 }
 </code></pre>
 <h2><a class="header" href="#note" id="note">Note</a></h2>
-<p>This convention does not enforce any restriction from the 8th digit onwards. Datapacker could utilize this to gain a few more model slots if they want to. (the digit index is count from right-to-left of course)</p>
+<p>This convention does not enforce any restrictions from the 8th digit onwards. Datapackers could utilize this to gain a few more model slots if they wanted to. (the digit index is count from right-to-left of course)</p>
 
                     </main>
 
