--- a/index.html
+++ b/index.html
@@ -160,20 +160,20 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#about" id="about">About</a></h1>
-<p>Minecraft Datapacks is a community-driven minecraft server about datapacks. This means we need a way to ensure compatibility between many datapacks to create a stable and friendly datapack ecosystem.</p>
+<p>Minecraft Datapacks is a community-driven Minecraft server about datapacks. This means we need a way to ensure compatibility between many datapacks to create a stable and friendly datapack ecosystem.</p>
 <p><a href="https://discord.gg/SnJQcfq">Discord</a></p>
 <h2><a class="header" href="#how-we-are-going-to-do-it" id="how-we-are-going-to-do-it">How we are going to do it</a></h2>
-<p>To achieve this we will use the &quot;programming conventions&quot; method, which we will kindly ask other users to follow to improve compatibility between datapacks. And to do that we need to create a way for users to be able to access these conventions very quickly. and that is the aim of this website.</p>
+<p>To achieve this we will use some &quot;programming conventions&quot;, which we will ask other users to follow to improve compatibility between datapacks. To do that, we need to create a way for users to be able to access these conventions conveniently. That is the aim of this website.</p>
 <h2><a class="header" href="#contribution" id="contribution">Contribution</a></h2>
-<p>If you wish to contribute to this project you can do it via <a href="https://github.com/mc-datapacks">this Github repository</a></p>
-<p>As of right now, there are 3 types of contribution <strong>Grammar Contribution</strong>, <strong>Tips Contribution</strong> and <strong>Convention Contribution</strong></p>
+<p>If you wish to contribute to this project, you can do it via <a href="https://github.com/mc-datapacks">this Github repository</a>.</p>
+<p>As of right now, there are 3 types of contribution: <strong>Grammar Contributions</strong>, <strong>Tips Contributions</strong> and <strong>Convention Contributions</strong>.</p>
 <ol>
-<li><strong>Grammar Contribution</strong> is a simple grammar correction pull-request, anyone can make this contribution if they notice grammar errors.</li>
-<li><strong>Tips Contribution</strong> is a contribution to a &quot;tips&quot; section of this repository, similar to <strong>Grammar Contribution</strong> you just need to make a pull-request and wait for approval.</li>
-<li><strong>Convention Contribution</strong> is a contribution to the &quot;conventions&quot; section of this repository, to contribute this please read the next section.</li>
+<li>A <strong>Grammar Contribution</strong> is a simple grammar correction pull-request, anyone can make this contribution if they notice grammar errors.</li>
+<li>A <strong>Tips Contribution</strong> is a contribution to the &quot;tips&quot; section of this repository, similar to <strong>Grammar Contributions</strong> you just need to make a pull-request and wait for approval.</li>
+<li>A <strong>Convention Contribution</strong> is a contribution to the &quot;conventions&quot; section of this repository. To contribute to the conventions, please read the below section.</li>
 </ol>
 <h3><a class="header" href="#convention-contribution" id="convention-contribution">Convention Contribution</a></h3>
-<p>To contribute to this you must first create an issue with the <code>Convention Suggestion</code> label in this format:</p>
+<p>To contribute to the official conventions, you must first create an issue with the <code>Convention Suggestion</code> label in this format:</p>
 <ol>
 <li>explanation of the convention.</li>
 <li>explanation on how to implement it.</li>
