--- a/style_guideline/index.html
+++ b/style_guideline/index.html
@@ -160,8 +160,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#style-guideline" id="style-guideline">Style Guideline</a></h1>
-<p>This is currently working in progress.</p>
-<p>You can read a draft version <a href="https://mc-datapacks.github.io/staff-guideline/style_guideline.html">here</a></p>
+<p>This is currently a work in progress.</p>
+<p>You can read a draft version <a href="https://mc-datapacks.github.io/staff-guideline/style_guideline.html">here</a>.</p>
 
                     </main>
 
