--- a/tips/shulker_box_inventory_manipulation.html
+++ b/tips/shulker_box_inventory_manipulation.html
@@ -161,19 +161,19 @@
                     <main>
                         <h1><a class="header" href="#shulker-box-inventory-manipulation" id="shulker-box-inventory-manipulation">Shulker Box Inventory Manipulation</a></h1>
 <h2><a class="header" href="#about" id="about">About</a></h2>
-<p>This technique allows us to manipulate the player's inventory just like any NBT using the shulker box's loot table.</p>
+<p>This technique allows us to manipulate the player's inventory just like any other NBT using the shulker box's loot table.</p>
 <h2><a class="header" href="#concept" id="concept">Concept</a></h2>
-<p>We take advantage of the fact that the shulker box can be configured to drop their content on the ground instead of a shulker box containing its content, which can then be used by <code>/loot</code> command to replace the player's inventory.</p>
+<p>We take advantage of the fact that the shulker box can be configured to drop their content on the ground instead of dropping a shulker box containing its content, which can then be used by the <code>/loot</code> command to replace the player's inventory.</p>
 <h2><a class="header" href="#implementation" id="implementation">Implementation</a></h2>
-<p>1. To follow with the <a href="/conventions/index.html">Official Conventions</a> you will have to modify the loot table of <code>minecraft:yellow_shulker_box</code> to the loot table below. The loot table will drop its content on the ground when it's mined by an item with NBT <code>{drop_contents: 1b}</code><br />
+<p>1. To comply with the <a href="/conventions/index.html">Official Conventions</a>, you will have to modify the loot table of <code>minecraft:yellow_shulker_box</code> to the loot table below. The loot table will drop its content on the ground when it's mined by an item with NBT <code>{drop_contents: 1b}</code><br />
 <a href="https://pastebin.com/4sspBvep"><center>https://pastebin.com/4sspBvep</center></a></p>
-<p>2. Create a placeholder shulker box that you will use to modify the player's inventory. Usually, this should be placed far away from player view but for simplicity's sake. I'll place it at <code>~ ~ ~</code>.</p>
+<p>2. Create a placeholder shulker box that you will use to modify the player's inventory. Usually, this should be placed far away from the player's view, but for simplicity's sake, I'll place it at <code>~ ~ ~</code>.</p>
 <pre><code>setblock ~ ~ ~ minecraft:yellow_shulker_box
 </code></pre>
 <p>3. You need to clone the player's inventory into some sort of NBT buffer, you can clone this into a data storage since they are faster.</p>
 <pre><code>data modify storage &lt;storage&gt; inventory set from entity &lt;player&gt; Inventory
 </code></pre>
-<p>4. Due to a limited number of slots inside the shulker box, You have to process the nbt in &quot;batch&quot; the easiest way to organize this batch can be done by splitting it into &quot;hotbar&quot;, &quot;inventory&quot;, &quot;armor&quot; and &quot;offhand&quot; batch.
+<p>4. Due to a limited number of slots inside the shulker box, you have to process the NBT in &quot;batches&quot;. The easiest way to organize these batches can be done by splitting it into &quot;hotbar&quot;, &quot;inventory&quot;, &quot;armor&quot; and &quot;offhand&quot; batches.
 <!-- - "hotbar" batch will contain items from slot 0 to 8 -->
 <!-- - "inventory" batch will contain items from slot 9 to 35 -->
 <!-- - "armor" batch will contain items from slot 100 to 103 -->
@@ -187,11 +187,11 @@ data modify storage &lt;storage&gt; batch.hotbar append from storage &lt;storage
 .
 .
 
-// Don't forget to remove `Slot` nbt from the item before moving to the next step!
+// Don't forget to remove the `Slot` NBT from the item before moving to the next step!
 data remove storage &lt;storage&gt; batch.hotbar[].Slot
 </code></pre>
 <p>4.2. Modify the NBT of each item however you like it to be.</p>
-<p>5. Copy the nbt from the previous step into the shulker box and then replace the player's inventory.</p>
+<p>5. Copy the NBT from the previous step into the shulker box and then replace the player's inventory.</p>
 <pre><code>data modify block ~ ~ ~ Items set from storage &lt;storage&gt; batch.hotbar
 loot replace entity &lt;player&gt; hotbar.0 9 mine ~ ~ ~ iron_pickaxe{drop_contents: 1b}
 
@@ -211,7 +211,7 @@ data remove storage &lt;storage&gt; batch
 data remove storage &lt;storage&gt; inventory
 </code></pre>
 <h2><a class="header" href="#note" id="note">Note</a></h2>
-<p>In this example, I assume that you need to modify NBT of all available slots but if you want to modify only items in your hotbar then you don't need to use &quot;inventory&quot;, &quot;armor&quot; and &quot;offhand&quot; batch.</p>
+<p>In this example, I assume that you need to modify NBT of all available slots, but if you want to, say, modify only items in your hotbar, then you don't need to use the unneeded batches, e.g. the &quot;inventory&quot;, &quot;armor&quot; and &quot;offhand&quot; batches.</p>
 
                     </main>
 
