--- a/index.html
+++ b/index.html
@@ -160,16 +160,17 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#about" id="about">About</a></h1>
-<p>Minecraft Datapacks is a community-driven Minecraft server about datapacks. This means we need a way to ensure compatibility between many datapacks to create a stable and friendly datapack ecosystem.</p>
+<p>Minecraft Datapacks is a community-driven Minecraft server about datapacks.</p>
+<p>But datapacks are prone to conflicts, which means we need a way to ensure compatibility between many datapacks to create a stable and friendly datapack ecosystem.</p>
 <p><a href="https://discord.gg/SnJQcfq">Discord</a></p>
 <h2><a class="header" href="#how-we-are-going-to-do-it" id="how-we-are-going-to-do-it">How we are going to do it</a></h2>
-<p>To achieve this we will use some &quot;programming conventions&quot;, which we will ask other users to follow to improve compatibility between datapacks. To do that, we need to create a way for users to be able to access these conventions conveniently. That is the aim of this website.</p>
+<p>To achieve this, we decide to create the Datapack Conventions, which will help improve compatibility between datapacks.</p>
 <h2><a class="header" href="#contribution" id="contribution">Contribution</a></h2>
 <p>If you wish to contribute to this project, you can do it via <a href="https://github.com/mc-datapacks">this Github repository</a>.</p>
 <p>As of right now, there are 3 types of contribution: <strong>Grammar Contributions</strong>, <strong>Tips Contributions</strong> and <strong>Convention Contributions</strong>.</p>
 <ol>
-<li>A <strong>Grammar Contribution</strong> is a simple grammar correction pull-request, anyone can make this contribution if they notice grammar errors.</li>
-<li>A <strong>Tips Contribution</strong> is a contribution to the &quot;tips&quot; section of this repository, similar to <strong>Grammar Contributions</strong> you just need to make a pull-request and wait for approval.</li>
+<li>A <strong>Grammar Contribution</strong> is a simple grammar correction pull-request. Anyone can make this contribution if they notice grammar errors.</li>
+<li>A <strong>Tips Contribution</strong> is a contribution to the &quot;tips&quot; section of this repository, similar to <strong>Grammar Contributions</strong> you need to make a pull-request and wait for the approval.</li>
 <li>A <strong>Convention Contribution</strong> is a contribution to the &quot;conventions&quot; section of this repository. To contribute to the conventions, please read the below section.</li>
 </ol>
 <h3><a class="header" href="#convention-contribution" id="convention-contribution">Convention Contribution</a></h3>
@@ -179,7 +180,9 @@
 <li>explanation on how to implement it.</li>
 <li>explanation of why it should be added.</li>
 </ol>
-<p>After that, we will discuss it, modify it, then vote on whether to add it or not. If the vote passed you can then submit a pull-request and wait for approval.</p>
+<p>After that, we will discuss it, modify it, then vote on whether to add it or not. If the vote passed, you can then submit a pull-request and wait for the approval.</p>
+<h2><a class="header" href="#becoming-datapack-reviewer" id="becoming-datapack-reviewer">Becoming Datapack Reviewer</a></h2>
+<p>While the process for selecting a reviewer has not been finalized yet, you can contact Boomber#5154 inside discord.</p>
 
                     </main>
 
